fix(Web): Page layout top spacing

--- a/apps/web/components/pages/PageCenterHeader.module.scss
+++ b/apps/web/components/pages/PageCenterHeader.module.scss
@@ -1,5 +1,5 @@
 .root {
-    padding-top: 8px * 10;
+    padding-top: 8px * 4;
     padding-bottom: 8px * 4;
 
     p {
